quick fix to an issue with mobile view. the div of actual stats looks a lot better than the previous version (the one with 2 boxes with scrollbars stacked on top of eachother). stil more work to be done with the mobile design and load times that i will get around to fixing.

--- a/style.css
+++ b/style.css
@@ -205,11 +205,12 @@ body {
 
   .actual-stats {
     width: 100%;
-    height: 100% auto;
+    height: 100%;
+    padding-top: 30px;
   }
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (min-width: 600px) {
   .characteristics {
     overflow: scroll;
   }
